# EdgeEdu-Offline-AI

./: .gitignore  CHATBOT_README.md  README.md  config.yaml  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
android/: settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
app/: layout.tsx  page.tsx  providers.tsx  theme.ts
app/browse/: page.tsx
app/chat/: page.tsx
app/components/: Header.tsx
app/lib/: analytics.ts  curriculum-data.ts  i18n.ts  search-utils.ts  types.ts
app/search/: page.tsx
app/store/: history-store.ts  language-store.ts  search-store.ts
app/styles/: globals.css
chatbot/: __init__.py  api.py  chat_history.py  content_index.py  data_pipeline.py  language_model.py  main.py  retrieval_qa.py
chatbot/utils/: config.py  text_processing.py
content/solutions/: 10th_Mathematics_1_English.json  9th_Math_1_English.json  9th_Math_2_English.json
data/: manifest.json
data/10th/: 10th_Geography_English.json  10th_Geography_Hindi.json  10th_Geography_Marathi.json  10th_History and Political Science_English.json  10th_History and Political Science_Hindi.json  10th_History and Political Science_Marathi.json  10th_Mathematics 1_English.json  10th_Mathematics 1_Hindi.json  10th_Mathematics 1_Marathi.json  (+9 more)
tests/: conftest.py  test_chat_history.py  test_content_index.py  test_manifest.py  test_real_data.py  test_retrieval_qa.py  test_schema.py  test_solutions.py  test_text_processing.py  test_upgrade.py
web/: package-lock.json  package.json
(+125 files in other folders)
